#3222 completed the basic layout update on the document

--- a/doc/Deliverables/BW4T3Instructions/EnvironmentStore/EnvStoreDoc.tex
+++ b/doc/Deliverables/BW4T3Instructions/EnvironmentStore/EnvStoreDoc.tex
@@ -1,6 +1,6 @@
 \newpage
 
-\section{Loading and creating new maps}
+\section{Map Editor}
 This section describes how you can edit existing maps or create new maps from scratch. This can be done with a editing tool, or by directly editing the map files manually.
 
 
