--- a/doc/Deliverables/BW4T3Instructions/ScenarioEditor/ScenarioEditorManual.tex
+++ b/doc/Deliverables/BW4T3Instructions/ScenarioEditor/ScenarioEditorManual.tex
@@ -27,21 +27,28 @@ On the right side of the editor you can create, modify, rename and delete bots a
 Linked to the Scenario Editor are the Bot Store and the E-partner Store, which will also be discussed in this document.
 
 
+\subsection{Configuration Panel}
+
+% wrap figure does not play nice with item lists. But the alternative, having the pic just in the top
+% of the page, is taking more space in the end.
 \begin{wrapfigure}{r}{0.3\textwidth}
-  \begin{center}
+ \begin{center}
 	\includegraphics[width=0.3\textwidth]{ScenarioEditor/config.png}
-  \end{center}
+ \end{center}
 \caption{Configuration Panel}
 \label{fig:ScenarioConfigPanel}
 \end{wrapfigure}
 
-\subsection{Configuration Panel}
+
 A picture of the configuration panel can be found in Figure \ref{fig:ScenarioConfigPanel}. You have the following options:
+
+
 
 \begin{itemize}
 
 \item{New configuration file}:
 To create a new configuration file, select $File$ $\to$ $New$ in the menu bar. You will now get a new configuration with the default values. Creating a new configuration will reset all previous changes you have made, so make sure you save your current configuration first if you want to keep it.
+
 
 \item{Open configuration file}:
 To open an existing configuration file, select $File$ $\to$ $Open$ in the menu bar. A window will pop up where you can select the folder where the configuration file is saved to. Once you have selected the right folder, select the file and click the $Open$ button.
