--- a/doc/Deliverables/BW4T3Instructions/ScenarioEditor/ScenarioEditorManual.tex
+++ b/doc/Deliverables/BW4T3Instructions/ScenarioEditor/ScenarioEditorManual.tex
@@ -157,6 +157,8 @@ If you want to cancel modifying the bot without saving any changes, you can clic
 
 
 \subsection{E-partner Store}
+WARNING: The e-partner component of BW4T is not yet completely ready for use.
+
 A picture of the E-partner Store is shown in Figure \ref{fig:epartnerstore}. You have the following options:
 
 \begin{figure}[h]
